# faster-api

./: .example.env  .gitignore  .pre-commit-config.yaml  CHANGELOG.update.md  Makefile  README.md  dependency-summary.txt  docker-compose.yml  docstring-template.txt  event-flow  items.py  parse_deps.py  podman-compose.yml  pyproject.toml  slots.py  techs.txt
.github/scripts/: commit_semantic_check.py  gen_changelog.py
.github/workflows/: auto-merge-deps..yml  automerge-deps..yml  commit-lint.yml  lint.yml  merge-scheduled.yml  tests.yml  update-depencies.yml  update-deps.yml
app/: main.py
app/api/events/consumers/: example.py
app/api/events/handlers/: example.py
app/core/: config.py
app/core/exceptions/: base.py  db.py  handlers.py
app/core/i18n/: manager.py
app/core/i18n/locales/: messages.pot
app/core/logging/: __init__.py  config.py  logger.py
app/core/middlewares/: language.py
app/domain/models/: __init__.py  base.py  example.py
app/domain/schemas/: base.py  bulk_insert.py  collection_reponse.py  example.py  health.py  pagination.py  query_params.py
app/domain/usecases/: example.py
app/infra/db/: manager.py  session.py  transaction.py
app/infra/kafka/: consumer.py  producer.py  topics.py
app/infra/repositories/: example.py
app/routers/: example.py
migrations/: env.py
migrations/versions/: 0d689540af11_initial.py  3de6ac8d6810_inital.py  527cdfa6b976_initial.py
tests/: conftest.py
tests/api/example/: test_example.py
tests/domain/usecases/: test_examples.py
tests/routers/: test_example.py
(+7 files in other folders)
